# cc_project_template_cmake

./: README.md
src/: CMakeLists.txt
